# MaiBot-Official-QQ-Adapter

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
adapter/: __init__.py  api_client.py  auth.py  event_handler.py  maibot_client.py  message_converter.py  qq_adapter.py
config/: config_example.toml
server/: __init__.py  webhook_server.py
